--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.19",
     "@types/redux-form": "^8.3.2",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
